--- a/portofolio/templates/portofolio/home.html
+++ b/portofolio/templates/portofolio/home.html
@@ -1,6 +1,6 @@
 {% extends 'portofolio/base.html' %}
 {% block content %}
-<h1>Arun`s portofolio</h1>
+<h1>Arun`s portofolio 😁 </h1>
 
 {% load static %}
 <a href="{% url 'blog:all_blogs' %}">Blog</a>
